test/e2e/syntax-error/karma.conf.ignore.js
// files to load
files = [
  JASMINE,
  JASMINE_ADAPTER,
  '*.js'
];

autoWatch = true;
autoWatchInterval = 1;
logLevel = LOG_INFO;
logColors = true;
reporters = ['dots'];